5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1633_2920.log
== TEST (2019-04-02 18:13:51) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
print (float(int(valor1(valor2(valor3)))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:13:55) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
print (float(int(valor1(valor2(valor3)))))

-- EXECUTION TIME:
0.179312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:15:01) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1+valor2+valor3
print= float(int(valortotal, 2))
-- EXECUTION TIME:
0.152791
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:03) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1+valor2+valor3
print= float(int(valortotal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:15:15) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1+valor2+valor3
print= round(float(int(valortotal, 2)))
-- EXECUTION TIME:
0.153744
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:15:37) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1+valor2+valor3
print round(valortotal, 2)
-- EXECUTION TIME:
0.144316
-- ERROR:
  File "/home/codebench/codes/1633/2920/main.py", line 5
    print round(valortotal, 2)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:38) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1+valor2+valor3
print round(valortotal, 2)
-- ERROR:
File "XXXX", line 5
    print round(valortotal, 2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:48) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1+valor2+valor3
print=round(valortotal, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:15:52) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1+valor2+valor3
print=round(valortotal, 2)
-- EXECUTION TIME:
0.139653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:16:01) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui? //1000")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.132282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:18:18) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.139874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:21) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:00) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:19:03) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valototal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.145955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:19:31) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.118148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:19:45) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valortotal=valor1//100+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.133047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:56) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valortotal=valor1//100+valor2+valor3
print(round(valortotal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:19:59) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valortotal=valor1//100+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.159577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:21) 
-- CODE:
valor1= float(int(input("quantas gramas o prato possui?")))
valor2= float(int(input("quantidade de bebidas ")))
valor3= float(int(input("quantidade de sobremesa ")))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= float(int(input()))
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:58) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:00) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.19874
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:03) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:05) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.128323
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:09) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.120947
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:26) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:37) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:40) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- EXECUTION TIME:
0.216916
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:43) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
print(round(valortotal, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:24:18) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
preco=26,90
suco=3,50
sobremesa=3,0
print(round(valortotal, 2))

-- EXECUTION TIME:
0.167612
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:20) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
preco=26,90
suco=3,50
sobremesa=3,0
print(round(valortotal, 2))

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:30:23) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=valor1//1000+valor2+valor3
preco=26,90
suco=3,50
sobremesa=3,0
print(round(valortotal, 2))

-- EXECUTION TIME:
0.193206
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:22) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=26,90+3,50+3,0
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:32:25) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=26,90+3,50+3,0
print(round(valortotal, 2))

-- EXECUTION TIME:
0.122677
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:32:38) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=26,90+2+2
print(round(valortotal, 2))

-- EXECUTION TIME:
0.141088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:08) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=26,90+2+1
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:33:10) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=26,90+2+1
print(round(valortotal, 2))

-- EXECUTION TIME:
0.209183
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:33:12) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=26,90+2+1
print(round(valortotal, 2))

-- EXECUTION TIME:
0.149171
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:17) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=26,90+2+1
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:37:37) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- EXECUTION TIME:
0.200711
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:55) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:40:58) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- EXECUTION TIME:
0.259097
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:06) 
-- CODE:
valor1= float(input("quantas gramas o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:41:20) 
-- CODE:
valor1= float(input("quantas kg o prato possui?"))
valor2= float(input("quantidade de bebidas "))
valor3= float(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- EXECUTION TIME:
0.203594
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 4, in <module>
    valortotal=constante+valor1//1000+valor2+valor3
NameError: name 'constante' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:54) 
-- CODE:
valor1= int(input("quantas kg o prato possui?"))
valor2= int(input("quantidade de bebidas "))
valor3= int(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:41:57) 
-- CODE:
valor1= int(input("quantas kg o prato possui?"))
valor2= int(input("quantidade de bebidas "))
valor3= int(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- EXECUTION TIME:
0.155234
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= int(input())
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:33) 
-- CODE:
valor1= int(input("quantas kg o prato possui?"))
valor2= int(input("quantidade de bebidas "))
valor3= int(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:52) 
-- CODE:
valor1= int(input("quantas kg o prato possui?"))
valor2= int(input("quantidade de bebidas "))
valor3= int(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:35) 
-- CODE:
valor1= int(input("quantas kg o prato possui?"))
valor2= int(input("quantidade de bebidas "))
valor3= int(input("quantidade de sobremesa "))
valortotal=constante+valor1//1000+valor2+valor3
constante=500.00+2+1
print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:23) 
-- CODE:
valor1= int(input("quantas kg o prato possui?"))
valor2= int(input("quantidade de bebidas "))
valor3= int(input("quantidade de sobremesa "))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor1= int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:31) 
-- CODE:
valor1= int(input("quantas kg o prato possui?"))
valor2= int(input("quantidade de bebidas "))
valor3= int(input("quantidade de sobremesa "))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.142478
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= int(input())
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:20) 
-- CODE:
valor1= int(input("quantas kg o prato possui?"))
valor2= int(input("quantidade de bebidas "))
valor3= int(input("quantidade de sobremesa "))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.143689
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2920/main.py", line 1, in <module>
    valor1= int(input())
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:56) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.164513
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
503.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
504.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
504.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:40) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- OUTPUT:
503.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:51) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- OUTPUT:
503.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:53) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.132089
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
503.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
504.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
504.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:56) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.181862
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
503.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
504.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
504.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:11) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))
constante=500.00+2+1
valortotal=constante+valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.139761
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
503.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
504.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
504.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:34) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))

valortotal=valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.143889
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:53) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))

valortotal=valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.131141
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:07) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))

valortotal=valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- EXECUTION TIME:
0.204207
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:17:14) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))

valortotal=valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- OUTPUT:
503.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:40) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))

valortotal=valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- OUTPUT:
503.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:56) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))

valortotal=valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- OUTPUT:
503.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:52:32) 
-- CODE:
valor1= int(float(input("quantas kg o prato possui?")))
valor2= int(float(input("quantidade de bebidas ")))
valor3= int(float(input("quantidade de sobremesa ")))

valortotal=valor1//1000+valor2+valor3

print(round(valortotal, 2))

-- OUTPUT:
503.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
